
[Test_FullWorkflow_Create_S3_YAML_Simple - 1]
>>>S3MAnagerMockClient.Download.Input
{
  Bucket: "..",
  Key: "../test-secrets/yaml/sopsfile.enc-age.yaml"
}
---

[Test_FullWorkflow_Create_S3_YAML_Simple - 2]
>>>SecretsManagerMockClient.PutSecretValue.Input
{
  SecretId: "arn:aws:secretsmanager:eu-central-1:123456789012:secret:testsecret",
  SecretString: "key1: value1\nkey2: 12345\nkey3: false\n"
}
---

[Test_FullWorkflow_Create_S3_YAML_Simple - 3]
>>>syncSopsToSecretsmanager
arn:custom:sopssync:eu-central-1:123456789012:secret:testsecret
map[string]interface {}{
    "ARN":           "arn:custom:sopssync:eu-central-1:123456789012:secret:testsecret",
    "Name":          "dfb70680d326c245dbdd113d635caa16113e78b1eb8b7447f10eeb861e491724",
    "VersionId":     "656f2d935b86bfbefbd97f1c55c1578aef8d96c5647a6161e37f94fb34a84d61",
    "VersionStages": []*string{
        &"dfb70680d326c245dbdd113d635caa16113e78b1eb8b7447f10eeb861e491724",
    },
}
nil
---

[Test_FullWorkflow_Create_S3_YAML_as_JSON_Simple - 1]
>>>S3MAnagerMockClient.Download.Input
{
  Bucket: "..",
  Key: "../test-secrets/yaml/sopsfile.enc-age.yaml"
}
---

[Test_FullWorkflow_Create_S3_YAML_as_JSON_Simple - 2]
>>>SecretsManagerMockClient.PutSecretValue.Input
{
  SecretId: "arn:aws:secretsmanager:eu-central-1:123456789012:secret:testsecret",
  SecretString: "{\n  \"key1\": \"value1\",\n  \"key2\": 12345,\n  \"key3\": false\n}"
}
---

[Test_FullWorkflow_Create_S3_YAML_as_JSON_Simple - 3]
>>>syncSopsToSecretsmanager
arn:custom:sopssync:eu-central-1:123456789012:secret:testsecret
map[string]interface {}{
    "ARN":           "arn:custom:sopssync:eu-central-1:123456789012:secret:testsecret",
    "Name":          "dfb70680d326c245dbdd113d635caa16113e78b1eb8b7447f10eeb861e491724",
    "VersionId":     "46b116fd9409581eb2623320d877cfa1f46cb2487bc3cd0672b1eb95554e65d3",
    "VersionStages": []*string{
        &"dfb70680d326c245dbdd113d635caa16113e78b1eb8b7447f10eeb861e491724",
    },
}
nil
---

[Test_FullWorkflow_Create_S3_YAML_Complex - 1]
>>>S3MAnagerMockClient.Download.Input
{
  Bucket: "..",
  Key: "../test-secrets/yaml/sopsfile-complex.enc-age.yaml"
}
---

[Test_FullWorkflow_Create_S3_YAML_Complex - 2]
>>>SecretsManagerMockClient.PutSecretValue.Input
{
  SecretId: "arn:aws:secretsmanager:eu-central-1:123456789012:secret:testsecret",
  SecretString: "and now:\n    some:\n        - basic: false\n        - nested: 12345\n        - type: 1.2345\n        - tests: Finish!\nsome:\n    deep:\n        nested:\n            arrays:\n                - with\n                - several\n                - values:\n                    and: objects\n            object: structure\n    notsodeep: struct\n"
}
---

[Test_FullWorkflow_Create_S3_YAML_Complex - 3]
>>>syncSopsToSecretsmanager
arn:custom:sopssync:eu-central-1:123456789012:secret:testsecret
map[string]interface {}{
    "ARN":           "arn:custom:sopssync:eu-central-1:123456789012:secret:testsecret",
    "Name":          "dfb70680d326c245dbdd113d635caa16113e78b1eb8b7447f10eeb861e491724",
    "VersionId":     "99d08789c0db731bcf0f3a467759c84c11e1b18253f9d614be55c817a410e088",
    "VersionStages": []*string{
        &"dfb70680d326c245dbdd113d635caa16113e78b1eb8b7447f10eeb861e491724",
    },
}
nil
---

[Test_FullWorkflow_Create_S3_YAML_as_JSON_Complex - 1]
>>>S3MAnagerMockClient.Download.Input
{
  Bucket: "..",
  Key: "../test-secrets/yaml/sopsfile-complex.enc-age.yaml"
}
---

[Test_FullWorkflow_Create_S3_YAML_as_JSON_Complex - 2]
>>>SecretsManagerMockClient.PutSecretValue.Input
{
  SecretId: "arn:aws:secretsmanager:eu-central-1:123456789012:secret:testsecret",
  SecretString: "{\n  \"and now\": {\n    \"some\": [\n      {\n        \"basic\": false\n      },\n      {\n        \"nested\": 12345\n      },\n      {\n        \"type\": 1.2345\n      },\n      {\n        \"tests\": \"Finish!\"\n      }\n    ]\n  },\n  \"some\": {\n    \"deep\": {\n      \"nested\": {\n        \"arrays\": [\n          \"with\",\n          \"several\",\n          {\n            \"values\": {\n              \"and\": \"objects\"\n            }\n          }\n        ],\n        \"object\": \"structure\"\n      }\n    },\n    \"notsodeep\": \"struct\"\n  }\n}"
}
---

[Test_FullWorkflow_Create_S3_YAML_as_JSON_Complex - 3]
>>>syncSopsToSecretsmanager
arn:custom:sopssync:eu-central-1:123456789012:secret:testsecret
map[string]interface {}{
    "ARN":           "arn:custom:sopssync:eu-central-1:123456789012:secret:testsecret",
    "Name":          "dfb70680d326c245dbdd113d635caa16113e78b1eb8b7447f10eeb861e491724",
    "VersionId":     "28e49c30b2d8af77e323b63c5c9e90ec2cf1385ab330eb674695ee065b1252f2",
    "VersionStages": []*string{
        &"dfb70680d326c245dbdd113d635caa16113e78b1eb8b7447f10eeb861e491724",
    },
}
nil
---

[Test_FullWorkflow_Create_S3_YAML_Complex_Flat - 1]
>>>S3MAnagerMockClient.Download.Input
{
  Bucket: "..",
  Key: "../test-secrets/yaml/sopsfile-complex.enc-age.yaml"
}
---

[Test_FullWorkflow_Create_S3_YAML_Complex_Flat - 2]
>>>SecretsManagerMockClient.PutSecretValue.Input
{
  SecretId: "arn:aws:secretsmanager:eu-central-1:123456789012:secret:testsecret",
  SecretString: "and now.some[0].basic: false\nand now.some[1].nested: 12345\nand now.some[2].type: 1.2345\nand now.some[3].tests: Finish!\nsome.deep.nested.arrays[0]: with\nsome.deep.nested.arrays[1]: several\nsome.deep.nested.arrays[2].values.and: objects\nsome.deep.nested.object: structure\nsome.notsodeep: struct\n"
}
---

[Test_FullWorkflow_Create_S3_YAML_Complex_Flat - 3]
>>>syncSopsToSecretsmanager
arn:custom:sopssync:eu-central-1:123456789012:secret:testsecret
map[string]interface {}{
    "ARN":           "arn:custom:sopssync:eu-central-1:123456789012:secret:testsecret",
    "Name":          "dfb70680d326c245dbdd113d635caa16113e78b1eb8b7447f10eeb861e491724",
    "VersionId":     "9383dcb62f4f91358496ec0e473c605325cf76d5162b1432f3efaaac14e6d07f",
    "VersionStages": []*string{
        &"dfb70680d326c245dbdd113d635caa16113e78b1eb8b7447f10eeb861e491724",
    },
}
nil
---

[Test_FullWorkflow_Create_S3_YAML_as_JSON_Complex_Flat - 1]
>>>S3MAnagerMockClient.Download.Input
{
  Bucket: "..",
  Key: "../test-secrets/yaml/sopsfile-complex.enc-age.yaml"
}
---

[Test_FullWorkflow_Create_S3_YAML_as_JSON_Complex_Flat - 2]
>>>SecretsManagerMockClient.PutSecretValue.Input
{
  SecretId: "arn:aws:secretsmanager:eu-central-1:123456789012:secret:testsecret",
  SecretString: "{\n  \"and now.some[0].basic\": false,\n  \"and now.some[1].nested\": 12345,\n  \"and now.some[2].type\": 1.2345,\n  \"and now.some[3].tests\": \"Finish!\",\n  \"some.deep.nested.arrays[0]\": \"with\",\n  \"some.deep.nested.arrays[1]\": \"several\",\n  \"some.deep.nested.arrays[2].values.and\": \"objects\",\n  \"some.deep.nested.object\": \"structure\",\n  \"some.notsodeep\": \"struct\"\n}"
}
---

[Test_FullWorkflow_Create_S3_YAML_as_JSON_Complex_Flat - 3]
>>>syncSopsToSecretsmanager
arn:custom:sopssync:eu-central-1:123456789012:secret:testsecret
map[string]interface {}{
    "ARN":           "arn:custom:sopssync:eu-central-1:123456789012:secret:testsecret",
    "Name":          "dfb70680d326c245dbdd113d635caa16113e78b1eb8b7447f10eeb861e491724",
    "VersionId":     "e9a8d3ab5715c1120faae25b669e5905a92fe4b261ae97eb1e65ad9ba52f9ee6",
    "VersionStages": []*string{
        &"dfb70680d326c245dbdd113d635caa16113e78b1eb8b7447f10eeb861e491724",
    },
}
nil
---
